Did rest of lab, not really working right now

--- a/lab4/sim-rtl-alu.yml
+++ b/lab4/sim-rtl-alu.yml
@@ -2,7 +2,6 @@
 sim.inputs:
   input_files:
     - "src/alu.v"
-    - "src/alu_op.vh"
     - "src/alu_testbench.v"
   timescale: "1ns/10ps"
   options:
@@ -12,6 +11,7 @@ sim.inputs:
     - "+v2k"
     - "-sverilog"
     - "-debug"
+    - "+incdir+../../src"
   top_module: "alu"
   tb_name: "alu_testbench"
   defines: 
